main/default/objects/Survey_Participant__c/Survey_Participant__c.object-meta.xml
<CustomObject>
    <label>Survey Participant</label>
    <nameField>
        <displayFormat>SP-{0000}</displayFormat>
        <label>Survey Participant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>