main/default/objects/Survey_Participant__c/fields/Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>Logo_URL__c</fullName>
    <formula>IF(Survey__r.Event_Email_Logo_URL__c != null, Survey__r.Event_Email_Logo_URL__c, Survey__r.Email_Logo_URL__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logo URL</label>
    <type>Text</type>
</CustomField>