main/default/objects/Survey_Participant__c/fields/Participant__c.field-meta.xml
<CustomField>
    <fullName>Participant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contact that has been selected as a participant for a survey</description>
    <inlineHelpText>Contact that has been selected as a participant for a survey</inlineHelpText>
    <label>Participant</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey Participants</relationshipLabel>
    <relationshipName>Survey_Participants</relationshipName>
    <type>Lookup</type>
</CustomField>