main/default/objects/Survey_Participant__c/fields/Survey__c.field-meta.xml
<CustomField>
    <fullName>Survey__c</fullName>
    <description>Survey that the contact has been selected to participate to</description>
    <inlineHelpText>Survey that the contact has been selected to participate to</inlineHelpText>
    <label>Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Survey Participants</relationshipLabel>
    <relationshipName>Survey_Participants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>