main/default/objects/Survey_Participant__c/fields/Survey_Catchup_Reminder_Message__c.field-meta.xml
<CustomField>
    <fullName>Survey_Catchup_Reminder_Message__c</fullName>
    <label>Survey Catch-Up Reminder Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>