main/default/objects/Survey_Participant__c/fields/Survey_Participant_URL__c.field-meta.xml
<CustomField>
    <fullName>Survey_Participant_URL__c</fullName>
    <description>Generates a URL that is sent via email for when a participant has to answer a survey</description>
    <formula>Survey__r.Survey_URL__c + &apos;&amp;sp=&apos; + Name + &apos;&amp;email=&apos; +  Participant__r.Email</formula>
    <label>Survey Participant URL</label>
    <type>Text</type>
</CustomField>